Fix dark mode flickering

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,20 @@
 
 @custom-variant dark (&:is(.dark *));
 
+/* Hide light/dark mode flickering */
+html {
+  visibility: hidden;
+  opacity: 0;
+}
+
+html.dark,
+html.light {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out;
+}
+/* End: Hide light/dark mode flickering */
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
